Archive/022a16c6c2c9d8916fc7b910089c5bae-33eeb6455874e7922f019f5d0b906cba/output
+ g++ -std=c++11 -O2 -Wall -pedantic -pthread main.cpp -fno-rtti
main.cpp: In function ‘int main()’:
main.cpp:38:40: error: ‘dynamic_cast’ not permitted with -fno-rtti
         if (dynamic_cast<Derived1*>(ptr))
                                        ^
main.cpp:40:45: error: ‘dynamic_cast’ not permitted with -fno-rtti
         else if (dynamic_cast<Derived2*>(ptr))
                                             ^
